0.7.0 (currently working on)
- [#2361] Feature: Display images uploaded for seminar in list view
- [#2352] Change: Show text "booked out" instead of empty string in registration column
- [#2354] Fix: getVacanciesOnRegistrationQueue returns wrong value for registrationQueue greater than zero
- [#2345] Feature: Display category icon in list view
- [#2312] Cleanup: Removed unneded condition in the selector widget code
- [#2319] Fix: Update the seminar's speaker and place fields less brutally
- [#2331] Feature: In the list view, link the speaker names to their home page (if they have any)
- [#2333] In the list view and single view, display a localized text next to the 0 vacancies for fully booked events
- [#2344] Feature: Allow to attach an image to seminar records
- [#2332] Feature: Allow to attach an icon to category records
- [#2330] Change: Make the begin date in time slots required
- [#2261] Feature: Show the owner data in the single view
- [#2336] Fix: Text "\ No newline at end of file" in two files
- [#2262] Feature: Add a new view "event headline"
- [#2329] Fix: Add a configcheck method check_tx_seminars_pi1 to remove the PHP notice from registrations- and categorylist
- [#2328] Fix: Selector widget does not get displayed
- [#2320] Feature: Link the teaser to the single view
- [#2318] Change: Make some fields in the time slots excludefields
- [#2263] Feature: Provide the seminar UID in the link to the login page
- [#1103] Change: Use real constructors instead of the old-style constructors
- [#2309] Change: Move the selector widget to its own class (a view)
- [#2028] Change: Convert the category list from a table to a list
- [#2120] Change: Use tabs for indentation only at the beginning of lines
- [#2306] Change: Use the registrationBagBuilder in tx_seminars_frontEndRegistrationsList
- [#2305] Feature: Create a frontEndView class for the seminar manager
- [#2208] Change: Use the seminar and registration bag builder in pi1