@@ -204,10 +204,15 @@
 <p>###CREDIT_POINTS###</p>
 
 <!-- ###FIELD_WRAPPER_CREDIT_POINTS### -->
-<!-- ###FIELD_WRAPPER_CATEGORY### --><h3>###LABEL_CATEGORY###</h3>
-<p>###CATEGORY###</p>
-
 <!-- ###FIELD_WRAPPER_CATEGORY### -->
+<h3>###LABEL_CATEGORY###</h3>
+<ul>
+<!-- ###SINGLE_CATEGORY### -->
+	<li>###CATEGORY_TITLE### ###CATEGORY_ICON###</li>
+<!-- ###SINGLE_CATEGORY### -->
+</ul>
+<!-- ###FIELD_WRAPPER_CATEGORY### -->
+
 <!-- ###FIELD_WRAPPER_DATE### --><h3>###LABEL_DATE###</h3>
 <p>###DATE###</p>
 
